New Version april 2019

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Latihan</string>
+    <string name="app_name">Sardifa Travel</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="title_activity_menu_">Sardifa Travel</string>
